--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
           <li><a href="#">Kontakt</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+48111111111">+48 111 111 111</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+      </ul>
     </header>
     <main>
       <section class="hero">
         <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button>Zamów usługę</button>
+        <button type="button">Zamów usługę</button>
       </section>
       <section class="strengths">
         <ul>
@@ -62,7 +64,7 @@
           <li>
             <img
               src="./images/programming.jpg"
-              alt="Programista piszący na klawiaturze"
+              alt="Programist typing on keyboard"
               width="370"
               height="294"
             />
@@ -70,7 +72,7 @@
           <li>
             <img
               src="./images/mockups.jpg"
-              alt="Grafik przygotowujący mockupy stron"
+              alt="A graphic designer who prepares page mockups"
               width="370"
               height="294"
             />
@@ -78,7 +80,7 @@
           <li>
             <img
               src="./images/mockups.jpg"
-              alt="Grafik projektujący wygląd strony i kolorystykę"
+              alt="A graphic designer who designs the website"
               width="370"
               height="294"
             />
@@ -90,7 +92,12 @@
         <ul>
           <li>
             <figure>
-              <img src="./images/webstudio-product-designer.jpg" />
+              <img
+                src="./images/webstudio-product-designer.jpg"
+                alt="Product designer"
+                width="270"
+                height="260"
+              />
               <figcaption>
                 <h3>John Doe</h3>
                 <p>Product Designer</p>
@@ -99,7 +106,12 @@
           </li>
           <li>
             <figure>
-              <img src="./images/webstudio-frontend-developer.jpg" />
+              <img
+                src="./images/webstudio-frontend-developer.jpg"
+                alt="Frontend developer"
+                width="270"
+                height="260"
+              />
               <figcaption>
                 <h3>John Doe</h3>
                 <p>Frontend Developer</p>
@@ -108,7 +120,12 @@
           </li>
           <li>
             <figure>
-              <img src="./images/webstudio-marketing.jpg" />
+              <img
+                src="./images/webstudio-marketing.jpg"
+                alt="Marketing"
+                width="270"
+                height="260"
+              />
               <figcaption>
                 <h3>John Doe</h3>
                 <p>Marketing</p>
@@ -117,7 +134,12 @@
           </li>
           <li>
             <figure>
-              <img src="./images/webstudio-ui-designer.jpg" />
+              <img
+                src="./images/webstudio-ui-designer.jpg"
+                alt="UI designer"
+                width="270"
+                height="260"
+              />
               <figcaption>
                 <h3>John Doe</h3>
                 <p>UI Designer</p>
@@ -128,10 +150,13 @@
       </section>
     </main>
     <footer>
+      <a href="#">WebStudio</a>
       <address>
         <p>m. Warszawa, Aleje Jerozolimskie 21</p>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+48111111111">+48 111 111 111</a>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+        </ul>
       </address>
     </footer>
   </body>
